26/7/2017 1.5.2.1

    user visible changes:
    * changed messages created during create_download_instructions to include total num files and total sizes
    * added progress items for already synced items so progress baar will start form the middle
    programmer visible changes:
    * new function SVNTable.get_not_to_download_num_files_and_size: will report the number and total sizes of the files that are already synced in cache

23/7/2017 1.5.2.0

    user visible changes:
    * report-versions, when checking a .bundle folder will first try to use the new Contents/Info.xml file before falling back to reading the Info.plist


29/6/2017 1.5.1.2

    user visible changes:
    * removed printing of PYTHONIOENCODING which would come our in inappropriate occasions

    programmer visible changes:
    * requirements file: added future>=0.16.0 and updated versions to latest
    * do_parallel_run fixed call to utf8_open


28/6/2017 1.5.1.1

    user visible changes:
    * improved printing PYTHONIOENCODING in case it's not utf8 or utf-8

22/6/2017 1.5.1.0

    user visible changes:
    * flush progress messages that are printed during instl run (not during batch file run),
        so they appear in correct timing in teh log
    * many changes to acomodate installing on chinese systems

    programmer visible changes:
    * fixed many inspection warnings
    * new function utils.utf8_open makes sure all files are opened with utf-8 encoding and errors='namereplace'
    * moved many file/folder/file system functions from midc_utils.py to new file files.py
    * sys.stdout is reopened as utf-8 since under Central is opens as ascii

11/6/2017 1.5.0.4

    user visible changes:
    * Added progress messages when preparing installer, currently only 4 dummy messages are produced

    programmer visible changes:
    * added 'import utils' in instlClientRemove.py where it was missing and caused uninstall not ot work

9/6/2017 1.5.0.3
    Some reformating to the change log file
